--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
-    "react-dom": "^18",
-    "sass": "^1.70.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
