--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive-masonry": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
