--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
     "citation-js": "^0.7.11",
-    "next": "14.1.0",
-    "react": "^18",
+    "eslint-config-next": "^14.2.3",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.1",
     "react-responsive-masonry": "^2.2.0"
   },
   "devDependencies": {
