--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.2",
     "citation-js": "^0.7.11",
     "eslint-config-next": "^14.2.3",
+    "framer-motion": "^11.2.10",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "next": "^14.2.3",
@@ -25,6 +26,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
+    "react-intersection-observer": "^9.10.2",
     "react-responsive-masonry": "^2.2.0"
   },
   "devDependencies": {
