--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
     "react-intersection-observer": "^9.10.2",
-    "react-responsive-masonry": "^2.2.0"
+    "react-responsive-masonry": "^2.2.0",
+    "sass": "^1.86.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
