--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
     "citation-js": "^0.7.18",
+    "clsx": "^2.1.1",
     "eslint-config-next": "^14.2.3",
     "framer-motion": "^11.2.10",
     "i18next": "^23.11.5",
